# forecast-data

./: .gitattributes  .gitignore  LICENSE  README.md  gen_dataset.py  metaculus_questions.json  pyproject.toml
manifold/: analyze.py  llm_filter.py  metric_filter.py  quality_filter.py  run.sh  scrape.py
metaculus/: analyze.py  filter.py  metaculus_scraping.ipynb  run.sh  scrape.py
