[project]
name = "forecast-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "argparse>=1.4.0",
    "datasets>=3.3.2",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "ray>=2.43.0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
]
